<resources>
    <string name="app_name">Recipe for You</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Example Username</string>
    <string name="nav_header_subtitle">email@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipies">Recipes</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_shoppinglist">Shopping list</string>
    <string name="menu_settings">Settings</string>

    <string name="change_settings">Change settings</string>
    <string name="test_button">Click me!</string>
    <string name="new_flag">Create New Flag</string>
    <string name="flag">Actual Flag Name</string>
    <string name="recipie">Actual Recipe</string>
    <string name="new_recipie">Create New Recipe</string>
    <string name="change_recipie">Change Actual Recipe</string>
    <string name="flag_button">Go to Flag Fragment</string>
    <!-- Shopping list    -->
    <string name="btn_shopping_list_delete">Delete purchased items</string>
    <string name="et_hint_shopping_list">Enter the item!</string>
    <string name="btn_shopping_list_add">Add item</string>
    <string name="tv_item">Example</string>
    <string name="recipie_fragment_recipiename">Test Recipe Name</string>
    <string name="tv_recipie_category">Flags/Categories</string>
    <string name="tv_recipie_time_info">Cooking time and abundance</string>
    <string name="et_recipie_time">30</string>
    <string name="et_recipie_abundance">4</string>
    <string name="tv_recipie_ingredients">Ingredients</string>
    <string name="tv_recipie_ingredient_item">Example</string>
    <string name="tv_recipie_spinner_selected">Example</string>
    <string name="tv_recipie_preparation">Preparation</string>
    <string name="change_recipie_fragment_recipiename">Change Test Recipe</string>
    <string name="chip_recipie_flag_desserts">Desserts</string>
    <string name="chip_recipie_flag_main_courses">Main courses</string>
    <string name="chip_recipie_flag_soups">Soups</string>
    <string name="chip_recipie_flag_drinks">Drinks</string>
    <string name="tv_change_recipie_item_title">Title</string>
    <string name="btn_add_new_ingredient">Add New Ingredient</string>
    <string name="btn_add_new_step">Add New Step</string>
    <string name="add_ingredient_tv_add_new_ingredients">Add new ingredients</string>
    <string name="hint_for_new_ingredient">Enter the new ingredient and the quantity here</string>
    <string name="add_new_steps">Add new steps</string>
    <string name="enter_the_new_step_here">Enter the new step here</string>
    <string name="edit_text">Edit Text</string>
    <string name="delete_text">Delete</string>
    <string name="change_rec_delete_recipie">Delete Recipe</string>
    <string name="flag_delete_flag">Delete Flag</string>
    <string name="tv_recipie_step_item">Example</string>
    <string name="menu_logout">Logout</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="registration">Registration</string>
    <string name="login_password_again">Password again</string>
    <string name="login_email">Email</string>
    <string name="login_cancel">Cancel</string>
    <string name="change_rec_save">Save</string>

    <!-- Settings - colors -->
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>
    <string name="pref_color_label_purple">Purple</string>
    <string name="pref_color_label_yellow">Yellow</string>
    <string name="pref_color_label_orange">Orange</string>
    <string name="pref_color_red_value">red</string>
    <string name="pref_color_blue_value">blue</string>
    <string name="pref_color_green_value">green</string>
    <string name="pref_color_purple_value">purple</string>
    <string name="pref_color_yellow_value">yellow</string>
    <string name="pref_color_orange_value">orange</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="shopping_list_title">Shopping list</string>
    <string name="flags_title">Flags</string>
    <string name="new_flag_title">Create new flag</string>
    <string name="new_recipie_flag">Create new recipe</string>
    <string name="change_recipie_title">Change recipe</string>
    <string name="recipie_title">Recipe</string>
    <string name="dark_mode_text">Dark mode:</string>
    <string name="theme_text">Theme:</string>
    <string name="your_username_text">Your Username:</string>
    <string name="your_profile_picture_name_text">Your profile picture name:</string>
    <string name="flags_create_new_flag">Create new flag</string>
    <string name="add_new_flag">Create new flag</string>
    <string name="new_flag_name">Enter the new flag name here</string>
    <string name="create_new_recipie">Create new recipe</string>
    <string name="cancel_new_recipie">Cancel</string>
    <string name="new_recipie_name">Enter Name</string>
    <string name="cooking_time_hint">Enter cooking time</string>
    <string name="abundance_hint">Enter abundance</string>
    <string name="btn_take_new_picture">Take a picture</string>
    <string name="btn_upload_picture">Upload picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_recipie">Please enter the name</string>
    <string name="search">Search</string>
    <string name="photos_and_videos">Photos and videos</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="menu_shares">Shared Recipes</string>
    <string name="shared_recipes">Shared Recipes</string>
    <string name="add_all_ingredients_to_shopping_list">Add all ingredients to shopping list</string>
    <string name="tv_recipie_author">Author</string>
    <string name="et_recipie_author">author</string>
    <string name="create_and_save_new_photo">Create and save new photo</string>
    <string name="language">Language</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_the_quantity_here">Enter the quantity here</string>
    <string name="lines">- -</string>
    <string name="fragment_search">Search</string>
</resources>