<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_recipies"
            android:icon="@drawable/ic_menu_recipies"
            android:title="@string/menu_recipies" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_shares"
            android:icon="@drawable/ic_shared_with_me"
            android:title="@string/shared_recipes" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_menu_shoppinglist"
            android:title="@string/menu_shoppinglist" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </menu>