<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recipies">

    <fragment
        android:id="@+id/nav_recipies"
        android:name="hu.bme.aut.android.onlab.ui.recipies.RecipiesFragment"
        android:label="@string/menu_recipies"
        tools:layout="@layout/fragment_recipies" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_favourites" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_shopping_list" />
        <action
            android:id="@+id/action_nav_recipies_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_recipies_to_nav_shopping_list2"
            app:destination="@id/nav_flag" />
        <action
            android:id="@+id/action_nav_recipies_to_nav_new_flag"
            app:destination="@id/nav_new_flag" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourites"
        android:name="hu.bme.aut.android.onlab.ui.favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_nav_favourites_to_nav_recipie"
            app:destination="@id/nav_recipie" />
    </fragment>

    <fragment
        android:id="@+id/nav_recipie"
        android:name="hu.bme.aut.android.onlab.ui.recipie.RecipieFragment"
        android:label="@string/recipie"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_nav_recipie_to_nav_change_recipie"
            app:destination="@id/nav_change_recipie" />
    </fragment>
    <fragment
        android:id="@+id/nav_change_recipie"
        android:name="hu.bme.aut.android.onlab.ui.change_recipie.ChangeRecipieFragment"
        android:label="@string/change_recipie"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_new_recipie"
        android:name="hu.bme.aut.android.onlab.ui.new_recipie.NewRecipieFragment"
        android:label="@string/new_recipie"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_new_flag"
        android:name="hu.bme.aut.android.onlab.ui.new_flag.NewFlagFragment"
        android:label="@string/new_flag"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="hu.bme.aut.android.onlab.ui.shoppinglist.ShoppinglistFragment"
        android:label="@string/menu_shoppinglist"
        tools:layout="@layout/fragment_shopping_list" />
    <fragment
        android:id="@+id/nav_flag"
        android:name="hu.bme.aut.android.onlab.ui.flag.FlagFragment"
        android:label="@string/flag"
        tools:layout="@layout/fragment_shopping_list" >
        <action
            android:id="@+id/action_nav_shopping_list2_to_nav_recipie"
            app:destination="@id/nav_recipie" />
        <action
            android:id="@+id/action_nav_flag_to_nav_new_recipie"
            app:destination="@id/nav_new_recipie" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="hu.bme.aut.android.onlab.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_nav_settings_to_nav_change_settings"
            app:destination="@id/nav_change_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_change_settings"
        android:name="hu.bme.aut.android.onlab.ui.change_settings.ChangeSettingsFragment"
        android:label="@string/change_settings"
        tools:layout="@layout/fragment_change_settings" />
</navigation>