<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.change_recipie.ChangeRecipieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4BCCCCCC"
            android:textColor="#90000000"
            android:paddingTop="16dp"
            android:textStyle="italic"
            android:text="@string/tv_recipie_category" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cg_recipie_flags">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/chip_recipie_flag_desserts"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/chip_recipie_flag_main_courses"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/chip_recipie_flag_soups"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/chip_recipie_flag_drinks"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4BCCCCCC"
            android:textColor="#90000000"
            android:paddingTop="16dp"
            android:textStyle="italic"
            android:text="@string/tv_recipie_time_info" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:paddingTop="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_recipie_time"
            android:drawablePadding="8dp"
            android:text="@string/et_recipie_time" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:paddingTop="8dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_recipie_serving"
            android:drawablePadding="8dp"
            android:text="@string/et_recipie_abundance" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4BCCCCCC"
            android:textColor="#90000000"
            android:paddingTop="16dp"
            android:textStyle="italic"
            android:text="@string/tv_recipie_ingredients" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>