<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="hu.bme.aut.android.onlab.ui.new_recipie.NewRecipieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.new_recipie.NewRecipieFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@color/GreensecondaryColor"-->
<!--                android:textColor="#90000000"-->
<!--                android:paddingTop="16dp"-->
<!--                android:textStyle="italic"-->
<!--                android:text="@string/tv_recipie_category" />-->

<!--            <com.google.android.material.chip.ChipGroup-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:id="@+id/cg_recipie_flags" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GreensecondaryColor"
                android:textColor="#90000000"
                android:paddingTop="16dp"
                android:textStyle="italic"
                android:text="@string/tv_recipie_time_info" />

            <EditText
                android:id="@+id/et_recipie_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GreenprimaryDarkColor"
                android:paddingTop="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_recipie_time"
                android:drawablePadding="8dp"
                android:text="@={viewmodel.creating_time}"
                android:hint="@string/cooking_time_hint" />


            <EditText
                android:id="@+id/et_recipie_abundance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GreenprimaryDarkColor"
                android:paddingTop="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_recipie_serving"
                android:drawablePadding="8dp"
                android:text="@={viewmodel.creating_abundance}"
                android:hint="@string/abundance_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GreensecondaryColor"
                android:textColor="#90000000"
                android:paddingTop="16dp"
                android:textStyle="italic"
                android:text="@string/tv_recipie_ingredients" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>